@@ -872,8 +872,8 @@
 		<guestaccount>ftp</guestaccount>
 		<maptoguest>Bad User</maptoguest>
 		<localmaster>yes</localmaster>
-		<rcvbuf>64240</rcvbuf>
-		<sndbuf>64240</sndbuf>
+		<rcvbuf>128480</rcvbuf>
+		<sndbuf>128480</sndbuf>
 		<storedosattributes/>
 		<largereadwrite/>
 		<!-- <usesendfile/> -->
